Bug fix: adds width to svg buttons that dont display on mobile views

--- a/src/styles/devList.scss
+++ b/src/styles/devList.scss
@@ -31,6 +31,7 @@ header {
       margin-left: 5px;
       display: flex;
       height: 25px;
+      width: 25px;
 
       .useradd-icon {
         color: green;
